tests/ui/parser/attribute/properly-recover-from-trailing-outer-attribute-in-body-2.stderr
error: expected `;`, found `#`
  --> $DIR/properly-recover-from-trailing-outer-attribute-in-body-2.rs:6:13
   |
LL |         #[cfg()]
   |         -------- only `;` terminated statements or tail expressions are allowed after this attribute
LL |         $foo
   |             ^ expected `;` here
LL |
LL |         #[cfg(false)]
   |         - unexpected token
...
LL |     the_macro!( (); (); );
   |     --------------------- in this macro invocation
   |
   = note: this error originates in the macro `the_macro` (in Nightly builds, run with -Z macro-backtrace for more info)
help: add `;` here
   |
LL |         $foo;
   |             +
help: alternatively, consider surrounding the expression with a block
   |
LL |     the_macro!( { () }; (); );
   |                 +    +

error: aborting due to 1 previous error

